Fix for friend request button mobile styling.

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -174,10 +174,12 @@ article.profile
   .friends-count-help
     font-size: 12px
 
-  .friends-count-find
+  .friends-count-find,
+  .friends-view-requests
     position: relative
     right: auto
     top: auto
+    bottom: auto
     margin: 10px 0 0
 
   .friend-requests-info
